# wallet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS  Makefile  README.md
data/: users.json  wallets.json
docs/: git.md  macos.md  structure.md  system_requirements.md  windows.md  wsl.md
include/auth/: auth.hpp
include/controllers/: AuthController.hpp  LogController.hpp  MenuController.hpp  TransactionController.hpp  WalletController.hpp
include/enums/: Enums.hpp
include/exceptions/: Exception.hpp  ExceptionType.hpp
include/libs/: bcrypt.hpp
include/models/: Otp.hpp  Transaction.hpp  TransactionStatus.hpp  User.hpp  Wallet.hpp
include/seeds/: MySeed.hpp
include/services/: AuthService.hpp  BackupHistory.hpp  CredentialBackup.hpp  OtpService.hpp  TransactionBackup.hpp  TransactionHistory.hpp  TransactionService.hpp  UserService.hpp  WalletBackup.hpp  WalletService.hpp
include/ui/: ui.hpp
include/user/: user.hpp
include/utils/: ExceptionHandler.hpp  Format.hpp  Hash.hpp  Input.hpp  MessageHandler.hpp  OTPGenerator.hpp  Password.hpp  Storage.hpp  Utf8Console.hpp  Validation.hpp  calculator.hpp  hash.hpp  input.hpp  storage.hpp
include/views/: AdminView.hpp  CustomerView.hpp  MainView.hpp  RegistrationView.hpp  UserInfoView.hpp  View.hpp
src/: main.cpp
src/auth/: auth.cpp
src/controllers/: AuthController.cpp  LogController.cpp  MenuController.cpp  TransactionController.cpp  WalletController.cpp
src/exceptions/: Exception.cpp
src/models/: Otp.cpp  Transaction.cpp  TransactionStatus.cpp  User.cpp  Wallet.cpp
src/seeds/: MySeed.cpp
src/services/: AuthService.cpp  BackupHistory.cpp  CredentialBackup.cpp  OtpService.cpp  TransactionBackup.cpp  TransactionHistory.cpp  TransactionService.cpp  UserService.cpp  WalletBackup.cpp  WalletService.cpp
src/ui/: ui.cpp
src/user/: user.cpp
src/utils/: ExceptionHandler.cpp  Format.cpp  Hash.cpp  Input.cpp  MessageHandler.cpp  OTPGenerator.cpp  Password.cpp  Storage.cpp  Validation.cpp  calculator.cpp  hash.cpp  input.cpp  password.cpp  storage.cpp  validation.cpp
src/views/: AdminView.cpp  CustomerView.cpp  MainView.cpp  RegistrationView.cpp  UserInfoView.cpp  View.cpp
